change position fixed

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixer</title>
-    <!-- <link rel="stylesheet" href="./css/main.css"> -->
-    <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
-    <link rel="stylesheet" href="./css/main-min.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <!-- <link rel="stylesheet" href="./css/main-min.css"> -->
 </head>
 <body>
     <!-- site header start -->
@@ -24,6 +24,23 @@
                         </li>
                         <li class="site-header-nav-item">
                             <a class="site-header-nav-item-link" href="./services.html">Xizmatlar</a>
+                            <ul class="site-header-nav-inner-list">
+                                <li class="site-header-nav-inner-item">
+                                    <a class="site-header-nav-inner-link first-item-link" href="./create-site.html">Vebsayt</a>
+                                </li>
+                                <li class="site-header-nav-inner-item">
+                                    <a class="site-header-nav-inner-link" href="./telegram-bot.html">Telegram bot</a>
+                                </li>
+                                <li class="site-header-nav-inner-item">
+                                    <a class="site-header-nav-inner-link" href="./smm.html">SMM</a>
+                                </li>
+                                <li class="site-header-nav-inner-item">
+                                    <a class="site-header-nav-inner-link" href="./grafik-dizayn.html">Grafik dizayn</a>
+                                </li>
+                                <li class="site-header-nav-inner-item">
+                                    <a class="site-header-nav-inner-link" href="./crm-systems.html">CRM tizim</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="site-header-nav-item">
                             <a class="site-header-nav-item-link" href="./portfolio.html">Portfolio</a>
@@ -54,7 +71,7 @@
                     <div class="hero-section-title-wrapper">
                         <h1 class="hero-section-title">Biznesingizni keyingi bosqichga olib chiqing</h1>
                         <p class="hero-section-description">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex, eget sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar</p>
-                        <a class="hero-section-btn" href="#">Xizmatlar bilan tanishish</a>
+                        <a class="hero-section-btn" href="#servises">Xizmatlar bilan tanishish</a>
                     </div>
                     <iframe class="hero-section-iframe" width="458" height="258" src="https://www.youtube.com/embed/6_pru8U2RmM" title="The whole working-from-home thing — Apple"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
@@ -63,7 +80,7 @@
     <!-- hero section end -->
 
     <!-- services section start -->
-    <section class="services-section">
+    <section class="services-section" id="servises" >
         <div class="container">
             <div class="services-section-wrapper">
                 <h2 class="services-section-wrapper-title">Xizmatlar</h2>
@@ -102,7 +119,7 @@
                 </li>
             </ul>
             <div class="services-section-inner">
-                <a class="services-section-inner-place-an-order" href="#">Buyurtma berish</a>
+                <a class="services-section-inner-place-an-order" href="#order">Buyurtma berish</a>
                 <a class="services-section-inner-link" href="#">Xizmatlar sahifasiga o’tish</a>
             </div>
         </div>
@@ -148,7 +165,7 @@
                     </li>
                 </ol>
                 <div class="howwework-section-inner-link">
-                    <a class="services-section-inner-place-an-order howwework-section-inner-link-btn" href="#">Buyurtma berish</a>
+                    <a class="services-section-inner-place-an-order howwework-section-inner-link-btn" href="#order">Buyurtma berish</a>
                 </div>
             </div>
         </div>
@@ -156,7 +173,7 @@
     <!-- Howwework section end -->
 
     <!-- order section start -->
-    <section class="order-section">
+    <section class="order-section" id="order">
         <div class="container">
             <h2 class="order-section-title">Buyurtma berish</h2>
             <p class="order-section-description">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex, eget sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar</p>
