--- a/services.html
+++ b/services.html
@@ -4,9 +4,232 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Services</title>
+    <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
+    <!-- <link rel="stylesheet" href="./css/main.css"> -->
+    <link rel="stylesheet" href="./css/main-min.css">
 </head>
 <body>
-    <p>Xizmatlar</p>
+
+    <!-- site header start -->
+    <header>
+        <div class="container">
+            <div class="site-header-wrapper">
+                <a class="site-header-img-link" href="./index.html">
+                    <img class="site-header-img" src="./images/site-logo.svg" alt="site logo">
+                </a>
+                <nav class="site-header-nav">
+                    <ol class="site-header-nav-list">
+                        <li class="site-header-nav-item">
+                            <a class="site-header-nav-item-link" href="./index.html">Bosh sahifa</a>
+                        </li>
+                        <li class="site-header-nav-item">
+                            <a class="site-header-nav-item-link" href="./services.html">Xizmatlar</a>
+                            <ul class="site-header-nav-inner-list">
+                                <li class="site-header-nav-inner-item">
+                                    <a class="site-header-nav-inner-link first-item-link" href="./create-site.html">Vebsayt</a>
+                                </li>
+                                <li class="site-header-nav-inner-item">
+                                    <a class="site-header-nav-inner-link" href="./telegram-bot.html">Telegram bot</a>
+                                </li>
+                                <li class="site-header-nav-inner-item">
+                                    <a class="site-header-nav-inner-link" href="./smm.html">SMM</a>
+                                </li>
+                                <li class="site-header-nav-inner-item">
+                                    <a class="site-header-nav-inner-link" href="./grafik-dizayn.html">Grafik dizayn</a>
+                                </li>
+                                <li class="site-header-nav-inner-item">
+                                    <a class="site-header-nav-inner-link" href="./crm-systems.html">CRM tizim</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="site-header-nav-item">
+                            <a class="site-header-nav-item-link" href="./portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="site-header-nav-item">
+                            <a class="site-header-nav-item-link" href="./team.html">Jamoa</a>
+                        </li>
+                        <li class="site-header-nav-item">
+                            <a class="site-header-nav-item-link" href="./blog.html">Blog</a>
+                        </li>
+                        <li class="site-header-nav-item">
+                            <a class="site-header-nav-item-link" href="./contacts.html">Kontaktlar</a>
+                        </li>
+                    </ol>
+                </nav>
+                <a class="site-header-wrapper-link" href="tel:+998909213711">+998 90 921 37 11</a>
+            </div>
+        </div>
+    </header>
+    <!-- site header end -->
+
+    <!-- site main start -->
+    <main class="site-main">
+    
+    <!-- services section start -->
+    <section class="service-hero-section">
+        <div class="container">
+            <div class="services-section-title-inner">
+                <h2 class="services-section-inner-title">Xizmatlar</h2>
+                <p class="services-section-inner-desc">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pretium orci nec neque finibus mattis. Vivamus in sem rhoncus, bibendum sapien in, placerat mi. Praesent tempus faucibus risus in imperdiet. Integer elementum justo sit amet odio tincidunt, a pellentesque massa condimentum.
+                </p>
+            </div>
+        </div>
+        <div class="services-section-inner-wrapper">
+            <div class="container">
+                <ul class="services-section-wrapper-list">
+                    <li class="services-section-wrapper-item">
+                        <h3 class="services-section-wrapper-item-title">Sayt tuzish</h3>
+                        <p class="services-section-wrapper-item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pretium orci nec neque finibus mattis</p>
+                        <ul class="services-section-wrapper-inner-list">
+                            <li class="services-section-wrapper-inner-item">lending</li>
+                            <li class="services-section-wrapper-inner-item">vizitka</li>
+                            <li class="services-section-wrapper-inner-item">korporativ</li>
+                            <li class="services-section-wrapper-inner-item">internet do’kon</li>
+                            <li class="services-section-wrapper-inner-item">maxsus</li>
+                        </ul>
+                        <div class="services-section-wrapper-item-inner">
+                            <a class="hero-section-btn services-section-wrapper-item-inner-link  order-link " href="#">Buyurtma berish</a>
+                            <a class="services-section-wrapper-item-inner-link" href="#">Batafsil ma’lumot</a>
+                        </div>
+                    </li>
+                    <li class="services-section-wrapper-item">
+                        <h3 class="services-section-wrapper-item-title">Telegram bot tuzish</h3>
+                        <p class="services-section-wrapper-item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pretium orci nec neque finibus mattis</p>
+                        <ul class="services-section-wrapper-inner-list">
+                            <li class="services-section-wrapper-inner-item">kontakt bot</li>
+                            <li class="services-section-wrapper-inner-item">ballar yig’ish</li>
+                            <li class="services-section-wrapper-inner-item">yetkazib berish</li>
+                            <li class="services-section-wrapper-inner-item">Telegram oldi-sotdi</li>
+                            <li class="services-section-wrapper-inner-item">ovoz bilan ishlash</li>
+                            <li class="services-section-wrapper-inner-item">maxsus</li>
+                        </ul>
+                        <div class="services-section-wrapper-item-inner">
+                            <a class="hero-section-btn services-section-wrapper-item-inner-link order-link" href="#">Buyurtma berish</a>
+                            <a class="services-section-wrapper-item-inner-link" href="#">Batafsil ma’lumot</a>
+                        </div>
+                    </li>
+                    <li class="services-section-wrapper-item">
+                        <h3 class="services-section-wrapper-item-title">SMM</h3>
+                        <p class="services-section-wrapper-item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pretium orci nec neque finibus mattis</p>
+                        <ul class="services-section-wrapper-inner-list">
+                            <li class="services-section-wrapper-inner-item">Facebook</li>
+                            <li class="services-section-wrapper-inner-item">Instagram</li>
+                            <li class="services-section-wrapper-inner-item">TikTok</li>
+                            <li class="services-section-wrapper-inner-item">reklamalarni sozlash</li>
+                            <li class="services-section-wrapper-inner-item">aksiyalar uyushtirish</li>
+                        </ul>
+                        <div class="services-section-wrapper-item-inner">
+                            <a class="hero-section-btn services-section-wrapper-item-inner-link order-link" href="#">Buyurtma berish</a>
+                            <a class="services-section-wrapper-item-inner-link" href="#">Batafsil ma’lumot</a>
+                        </div>
+                    </li>
+                    <li class="services-section-wrapper-item">
+                        <h3 class="services-section-wrapper-item-title">Grafik dizayn</h3>
+                        <p class="services-section-wrapper-item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pretium orci nec neque finibus mattis</p>
+                        <ul class="services-section-wrapper-inner-list">
+                            <li class="services-section-wrapper-inner-item">logotip</li>
+                            <li class="services-section-wrapper-inner-item">korporativ stil</li>
+                            <li class="services-section-wrapper-inner-item">brending</li>
+                            <li class="services-section-wrapper-inner-item">ijtimoiy tarmoq sahifalari uchun posterlar</li>
+                        </ul>
+                        <div class="services-section-wrapper-item-inner">
+                            <a class="hero-section-btn services-section-wrapper-item-inner-link order-link" href="#">Buyurtma berish</a>
+                            <a class="services-section-wrapper-item-inner-link" href="#">Batafsil ma’lumot</a>
+                        </div>
+                    </li>
+                    <li class="services-section-wrapper-item">
+                        <h3 class="services-section-wrapper-item-title">CRM tizimlar</h3>
+                        <p class="services-section-wrapper-item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pretium orci nec neque finibus mattis</p>
+                        <ul class="services-section-wrapper-inner-list">
+                            <li class="services-section-wrapper-inner-item">do’konlar va omborlar</li>
+                            <li class="services-section-wrapper-inner-item">oshxona, kafe va restoranlar</li>
+                            <li class="services-section-wrapper-inner-item">shaxsiy hisob-kitoblar</li>
+                            <li class="services-section-wrapper-inner-item">maxsus</li>
+                        </ul>
+                        <div class="services-section-wrapper-item-inner">
+                            <a class="hero-section-btn services-section-wrapper-item-inner-link order-link" href="#">Buyurtma berish</a>
+                            <a class="services-section-wrapper-item-inner-link" href="#">Batafsil ma’lumot</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>  
+    
+    <!-- order section start -->
+    <section class="order-section" id="order">
+        <div class="container">
+            <h2 class="order-section-title">Buyurtma berish</h2>
+            <p class="order-section-description">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex, eget sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar</p>
+            <form class="order-section-form" action="https://echo.htmlacademy.ru/" method="post" autocomplete="off">
+                <input class="order-section-form-input" type="text" name="user_name" aria-label="Please enter your name!" placeholder="Ismingiz" required>
+                <input class="order-section-form-input" type="tel" name="user_phone" aria-label="Please enter your name!" placeholder="Telefon raqamingiz" required>
+                <select class="order-section-form-input" name="type_of_service" required>
+                    <option value="" selected disabled>Xizmat turi</option>
+                    <option value="Vebsayt tuzish">Vebsayt tuzish</option>
+                    <option value="Telegram bot">Telegram bot</option>
+                    <option value="SMM">SMM</option>
+                    <option value="Grafik dizayn">Grafik dizayn</option>
+                    <option value="CRM tizimlar">CRM tizimlar</option>
+                </select>
+                <button class="services-section-inner-place-an-order order-section-form-btn" type="submit">Buyurtma berish</button>
+            </form>
+        </div>
+    </section>
+    <!-- order section end -->
+    </main>
+    <!-- site main end -->
+
+    <!-- site footer start -->
+    <footer>
+        <div class="container">
+            <div class="fotter-wrapper">
+                <div class="fotter-inner">
+                    <strong class="fotter-inner-title">Copyright 2020</strong>
+                    <p class="fotter-inner-description">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex, eget sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar tincidunt.</p>
+                </div>
+                <div class="site-pages-wrapper">
+                    <strong class="site-pages-wrapper-title">Sayt sahifalari</strong>
+                    <ul class="site-pages-wrapper-list">
+                        <li class="site-pages-wrapper-item">
+                            <a class="site-pages-wrapper-item-link" href="./index.html">Bosh sahifa</a>
+                        </li>
+                        <li class="site-pages-wrapper-item">
+                            <a class="site-pages-wrapper-item-link" href="./services.html">Xizmatlar</a>
+                        </li>
+                        <li class="site-pages-wrapper-item">
+                            <a class="site-pages-wrapper-item-link" href="./portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="site-pages-wrapper-item">
+                            <a class="site-pages-wrapper-item-link" href="./team.html">Jamoa</a>
+                        </li>
+                        <li class="site-pages-wrapper-item">
+                            <a class="site-pages-wrapper-item-link" href="./blog.html">Blog</a>
+                        </li>
+                        <li class="site-pages-wrapper-item">
+                            <a class="site-pages-wrapper-item-link" href="./contacts.html">Kontaktlar</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="our-social-wrapper">
+                    <strong class="our-social-title">Biz internetda</strong>
+                    <ul class="our-social-title-list">
+                        <li class="our-social-title-item">
+                            <a class="our-social-title-item-link" href="#" target="blank">Telegram</a>
+                        </li>
+                        <li class="our-social-title-item">
+                            <a class="our-social-title-item-link facebook" href="#" target="blank">Facebook</a>
+                        </li>
+                        <li class="our-social-title-item">
+                            <a class="our-social-title-item-link instagram" href="#" target="blank">Instagram</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- site footer end -->  
 </body>
 </html>
